Dark mode fix

--- a/styles/sidenav.module.scss
+++ b/styles/sidenav.module.scss
@@ -5,7 +5,7 @@
     border-bottom: 1px solid black;
     text-align: right;
     position: relative;
-    color: black;
+    color: inherit;
 
     .logodiv {
         position: absolute;
@@ -54,8 +54,4 @@
 }
 .link:hover {
     text-decoration: none;
-}
-.linkdarkmode {
-    background-color: black;
-    color: white;
 }
